--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,27 @@
 .bgColor {
     background-color: red;
 }
+
+.container {
+        height: 100vh;
+        width: 100vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 07px 07px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . ."
+          ". . . . . . . . . . . .";
+      }
+    
