--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,24 @@
 }
 
 body{
-    background-color: black;
+    background-color: rgb(18, 18, 18)
 }
 
+.mainContent{
+    backdrop-filter: blur(25px) saturate(200%);
+    -webkit-backdrop-filter: blur(25px) saturate(200%);
+    background-color: rgba(30, 30, 31, 0.63);  
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+
+    
+}
+.leftContent{
+    backdrop-filter: blur(25px) saturate(200%);
+    -webkit-backdrop-filter: blur(25px) saturate(200%);
+    background-color: rgba(30, 30, 31, 0.63);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+}
 
     
