--- a/app/globals.css
+++ b/app/globals.css
@@ -27,4 +27,13 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
+
+.profilePic{
+    backdrop-filter: blur(25px) saturate(200%);
+    -webkit-backdrop-filter: blur(25px) saturate(200%);
+    background-color: rgba(47, 47, 49, 0.63);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
     
