--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,15 @@ body{
     -webkit-backdrop-filter: blur(25px) saturate(200%);
     background-color: rgba(47, 47, 49, 0.63);
     border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+    z-index: -10;
+}
+
+.myTagline{
+    backdrop-filter: blur(25px) saturate(200%);
+    -webkit-backdrop-filter: blur(25px) saturate(200%);
+    background-color: rgba(47, 47, 49, 0.63);
+    border-radius: 12px;
+    text-align: center;
 }
 
     
