--- a/app/globals.css
+++ b/app/globals.css
@@ -44,4 +44,10 @@ body{
     text-align: center;
 }
 
+.lineStyle{
+    backdrop-filter: blur(25px) saturate(200%);
+    -webkit-backdrop-filter: blur(25px) saturate(200%);
+    background-color: rgba(47, 47, 49, 0.63);
+}
+
     
