--- a/public/Index.css
+++ b/public/Index.css
@@ -13,5 +13,21 @@
     --text-color: hsl(244, 16%,43%);
     --body-color: hsl(258,60%,98%);
     --container-color:#fff;
-    
+
+    /* ==Fonts And TypoGraphy==*/
+    /* ==.5rem = 8px | 1rem = 16px ==*/
+
+    --body-font: 'Rubik', sans-serif;
+    --h1-font-size: 2.25rem;
+    --h2-font-size:2.25rem;
+    --h3-font-size:1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: 0.875rem; 
+    --smaller-font-size: 0.813rem;   
+
+    /* ==Fonts Weight==*/
+
+    --font-medium:500;
+    --font-semibold:600;
+    --font-bold:700;
 }
