--- a/app/Components/resume/Resume.css
+++ b/app/Components/resume/Resume.css
@@ -33,3 +33,24 @@
     top: 0%;
 
 }
+
+.timeline .icon-briefcase,
+.timeline .icon-graduation {
+    position: absolute;
+    left: -0.4375rem;
+    top: 0%;
+    font-size: var(--h2-font-size);
+    color: var(--first-color);
+    background-color: var(--container-color);
+    padding: 0.4375rem 0;
+}
+
+.timeline__date {
+    color: #8b88b1;
+    font-size: var(--small-font);
+}
+
+.timeline__title {
+    font-size: var(--h3-font-size);
+    margin: 0.5rem 0 ;
+}
