--- a/app/Components/portfolio/Portfolio.css
+++ b/app/Components/portfolio/Portfolio.css
@@ -34,5 +34,65 @@
     top: 0%;
     height: 100%;
     width: 100%;
-    
+    transition: .3s;
+    opacity: 0;
+
+}
+
+.work__card:hover .work__mask {
+    opacity: 0.9;
+}
+
+.work__category {
+    color: #fff;
+    background-color: var(--first-color);
+    border-bottom-left-radius: 0.98rem;
+    border-bottom-right-radius: 0.98rem;
+    position: absolute;
+    top: 0%;
+    left: 1.5rem;
+    font-size: var(--small-font-size);
+    display: inline-block;
+    padding: 0.19rem 0.625rem;
+    transform: translateY(-40px);
+    transition: .3s;
+}
+
+.work__title {
+    color: #fff;
+    font-size: var(--h3-font-size);
+    margin: 0 0 0.98rem;
+    padding: 0 1.25rem;
+    position: absolute;
+    top: 3.75rem;
+    transform: translateY(30px);
+    transition: .3s;
+    opacity: 0;
+}
+
+.work__button {
+    color:#fff;
+    position: absolute;
+    bottom: 1.5rem;
+    left: 1.5rem;
+    display: block;
+    background-color: #ffd15c;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    transition: .3s;
+    opacity: 0;
+}
+
+.work__card:hover .work__button {
+    opacity: 1;
+}
+
+.work__card:hover .work__title,
+.work__card:hover .work__category {
+    opacity: 1;
+    transform: translateY(0);
 }
