Fixed Some Minor Bugs .

--- a/app/Components/about/About.css
+++ b/app/Components/about/About.css
@@ -74,12 +74,12 @@
 }
 
 .ui__design {
-    width: 90%;
+    width: 80%;
     background-color: rgb(255, 76, 96);
 }
 
-.photography {
-    width: 90%;
+.DSA {
+    width: 40%;
     background-color: rgb(108, 108, 299);
 }
 
