started making app responsive.

--- a/app/Components/sidebar/Sidebar.css
+++ b/app/Components/sidebar/Sidebar.css
@@ -37,3 +37,10 @@
     transform: rotate( -180deg);
     writing-mode: vertical-rl;
 }
+
+.nav__toggle {
+    position: fixed;
+    top: 1.25rem;
+    left: 1.875rem;
+    
+}
