made this app fully responsive.

--- a/app/Components/home/Home.css
+++ b/app/Components/home/Home.css
@@ -160,3 +160,9 @@
     bottom: 10%;
     right: 2%;
   }
+
+  @media screen and (max-width:1024px) {
+    .home__social-link {
+      font-size: 1.125rem ;
+  }
+}
