--- a/app/Components/portfolio/Portfolio.css
+++ b/app/Components/portfolio/Portfolio.css
@@ -1,6 +1,7 @@
 .work__filters {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     column-gap: 1.875rem;
     margin-top: 2.5rem;
 }
@@ -83,7 +84,7 @@
     border-radius: 50%;
     text-align: center;
     line-height: 42px;
-    transition: .3s;
+    transition: .3s; 
     opacity: 0;
 }
 
@@ -95,4 +96,34 @@
 .work__card:hover .work__category {
     opacity: 1;
     transform: translateY(0);
+}
+
+@media screen and (max-width: 1024px) {
+
+        .work__filters {
+
+            justify-content: center;
+            
+        }
+        .work__container {
+        grid-template-columns: repeat(2,330px);
+        justify-content: center;
+        row-gap: 1.875rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .work__container {
+        grid-template-columns: 310px;
+    }
+
+    .work__filters {
+        row-gap: .25rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .work__container {
+        grid-template-columns: 1fr;
+    }
 }
