--- a/app/Components/resume/Resume.css
+++ b/app/Components/resume/Resume.css
@@ -54,3 +54,52 @@
     font-size: var(--h3-font-size);
     margin: 0.5rem 0 ;
 }
+
+ @media screen and (max-width: 1024) {
+    .resume__container {
+        grid-template-columns: 540px;
+        justify-content: center;
+        row-gap: 1.875rem;
+    }
+
+    .timeline__item::before {
+        left: 2px;
+    }
+ }
+
+
+ @media screen and (max-width: 576px) {
+    .resume__container {
+        grid-template-columns: 1fr;
+    }
+ }
+
+ @media screen and (max-width: 350px) {
+    .timeline__item {
+        padding-left: 1.875rem;
+        padding-bottom: 1.875rem;
+    }
+
+    .timeline__item::before 
+    {
+        left: 0%;
+    }
+
+    .timeline .icon-briefcase,
+    .timeline .icon-graduation {
+        left: -9px;
+    }
+
+    .timeline__text {
+        text-align: justify;
+    }
+
+    }
+
+    @media screen and (max-width: 576px) {
+
+        .about__container {
+            grid-template-columns: 320px;
+        }
+
+    }
