--- a/app/Components/about/About.css
+++ b/app/Components/about/About.css
@@ -104,3 +104,76 @@
 .about__title{
     font-size: 1.875rem;
 }
+
+@media screen and (max-width:1024px) {
+    .about__container{
+         grid-template-columns: 720px;
+         justify-content: center;
+         row-gap: 1.875rem;
+    } 
+
+    .about__data::before {
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+        left:49%;
+        top: -20px;
+
+    }
+
+    .about__img {
+        justify-self: center;
+        height: 220px;
+        width: 225px;
+    }
+
+    .about__box {
+        flex-direction: column;
+        row-gap: .5rem;
+        text-align: center;
+    }
+}  
+
+@media screen and (max-width:768px) {
+    .about__container {
+        grid-template-columns: 350px;
+    }
+
+    .about__data::before {
+        left: 47%;
+    }
+
+    .about__data {
+        grid-template-columns: 1fr;
+        row-gap: 1.875rem;
+    }
+
+    .about__boxes {
+        grid-template-columns: repeat(2,150px);
+        row-gap: 1.5rem;
+        justify-content: center;
+        
+    }
+}
+
+@media screen and (max-width: 576px) {
+
+    .about__container {
+        grid-template-columns: 320px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+
+    .about__container {
+        grid-template-columns: 1fr;
+    }
+}
+
+    .about__boxes {
+
+        grid-template-columns: 1fr;
+        
+    }
+
+  
