--- a/app/globals.css
+++ b/app/globals.css
@@ -174,3 +174,9 @@
     .main {
         margin-left: 110px;
     }
+
+    @media screen and (max-width:1024px) {
+        .main{
+             margin-left: 0;
+        }
+    }
